# projeto-engenharia-haskell

./: Algebra.hs  Algorithms.hs  Calculus.hs  DataStructures.hs  Geometry.hs  Interface.hs  Main.hs  README.md  Types.hs  algoritmos.hs  n_sei_o_nome_Projeto.hs  project.cabal  to-do.md
Engineering/: ALL  ALL.hs  Civil.hi  Civil.hs  Electrical.hi  Electrical.hs  Mechanical.hi  Mechanical.hs
Tests/: AlgorithmsTests.hs  AllTests.hs  CalculusTests.hs  CivilEngineeringTests.hs  ElectricalEngineeringTests.hs  GeometryTest.hs  GeometryTests.hs  LinearAlgebraTests.hs  MechanicalEngineeringTests.hs  SortingTests.hs  ValidationTests.hs
dist-newstyle/cache/: config  elaborated-plan  improved-plan  plan.json  solver-plan  source-hashes  up-to-date
dist-newstyle/packagedb/ghc-9.6.7/: package.cache  projeto-engenharia-1.0.0-inplace.conf
