cabal-version:       2.4
name:                projeto-engenharia
version:             1.0.0
synopsis:            Projeto de Engenharia em Haskell
license:             BSD-3-Clause
author:              Grupo de Estudantes
maintainer:          seu@email.com
category:            Engineering
build-type:          Simple

library
  exposed-modules:
      Types,
      Geometry,
      Algebra,
      Calculus,
      Algorithms,
      DataStructures,
      Interface,
      Engineering.Civil,
      Engineering.Mechanical,
      Engineering.Electrical

  build-depends: base >=4.17 && <5, time
  default-language: Haskell2010


executable projeto-engenharia
  main-is: Main.hs
  other-modules:
      Algorithms,
      Calculus,
      DataStructures,
      Engineering.Civil,
      Engineering.Electrical,
      Engineering.Mechanical,
      Geometry,
      Algebra,
      Interface,
      Types
  build-depends: base, projeto-engenharia, time
  default-language: Haskell2010


test-suite Tests
  type: exitcode-stdio-1.0
  hs-source-dirs: Tests
  main-is: AllTests.hs
  other-modules:
      AlgorithmsTests
  build-depends: base, projeto-engenharia, time
  default-language: Haskell2010

